# llm-bias-testing

./: .gitignore  AGENTS.md  CONTRIBUTING.md  PROMPT-fix-criticals.md  README.md  compare_models.py  keys.py.example  main.py  pyproject.toml  records.csv
.github/agents/: my-agent.agent.md
.github/workflows/: ci.yml
examples/: cv_template.py  cvs.py  job_description.py
results/: experiment_summary.json
results/qwen25-05b/stereoset/: results.json  stereoset.json
results/qwen25-15b/stereoset/: results.json  stereoset.json
results/smollm-135m/stereoset/: results.json  stereoset.json
results/smollm-360m/stereoset/: results.json  stereoset.json
results/smollm2-135m/cv-screening/: records.csv  results.json
results/smollm2-135m/stereoset/: results.json  stereoset.json
results/smollm2-360m/stereoset/: results.json  stereoset.json
scripts/: overnight_benchmark.sh  overnight_run.sh  phase1_run.sh  run_all.py  run_experiments.py
src/llm_bias_testing/: analysis.py  benchmark.py  call_api.py  ollama.py  ollama_setup.py  openai_model.py  registry.py  runner.py  temporal.py  transformers.py
src/llm_bias_testing/benchmarks/: __init__.py  bbq.py  crows_pairs.py  demographic_bias.py  stereoset.py  winobias.py
src/python_template/: call_api.py
src/slm_bias_testing/: analysis.py  benchmark.py  call_api.py  ollama_setup.py  registry.py  runner.py  temporal.py  transformers.py  visualisations.py
src/slm_bias_testing/benchmarks/: __init__.py  demographic_bias.py  stereoset.py  winobias.py
tests/: conftest.py  test_analysis.py  test_benchmarks.py  test_call_api.py  test_cvs.py  test_main.py  test_registry.py  test_runner.py  test_temporal.py  test_visualisations.py
