[project]
name = "llm-bias-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "William Dennis", email = "wwdennis.home@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.0",
    "ollama>=0.6.1",
    "openai>=2.15.0",
    "ruff>=0.14.10",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
