[project]
name = "llm-bias-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "William Dennis", email = "wwdennis.home@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.18",
    "matplotlib>=3.10.3",
    "numpy>=2.4.0",
    "ollama>=0.6.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.10",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
