[project]
name = "slm-bias-testing"
version = "0.1.0"
description = "Bias evaluation benchmarks for small language models"
readme = "README.md"
authors = [
    { name = "William Dennis", email = "wwdennis.home@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.18",
    "matplotlib>=3.10.3",
    "numpy>=2.4.0",
    "ollama>=0.6.1",
    "pandas>=2.2.3",
    "scipy>=1.15.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.10",
    "mypy>=1.15.0",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

# ── Ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (Pydantic/dataclass pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["slm_bias_testing"]

# ── Mypy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services (Ollama, network)",
]
